@@ -1,6 +1,6 @@
 # This file is generated by dune, edit dune-project instead
 opam-version: "2.0"
-version: "0.5.0"
+version: "0.5.1"
 synopsis: "Bindings to libflac"
 maintainer: ["The Savonet Team <savonet-users@lists.sourceforge.net>"]
 authors: ["The Savonet Team <savonet-users@lists.sourceforge.net>"]
