@@ -2,6 +2,7 @@
 =====
 * Use generational global roots to protect
   encoder and decoder callbacks.
+* Harness more global roots.
 
 0.5.0 (2023-09-05)
 =====
